# ewatrade

./: .env  .env.example  .env.production  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  GEMINI.md  README.md  biome.json  compose.yaml  docker-compose.yml  index.js  package.json  tsconfig.json  turbo.json  vercel.json
.brain/: AI_PROMPT_RULES.md  AI_WORKFLOW.md  BRAIN.md  PROJECT_INDEX.md  SYSTEM_OVERVIEW.md  progress.md
.brain/api/: contracts.md  endpoints.md  permissions.md
.brain/architecture/: multi-tenant.md  system-architecture.md
.brain/bugs/: README.md
.brain/database/: migrations.md  relationships.md  schema.md
.brain/decisions/: ADR-0002-midday-inspired-monorepo-architecture.md  ADR-0004-ewatrade-dispatch-internal-app-boundary.md  ADR-0005-product-image-marketplace-token-and-publish-boundary.md  ADR-0006-mobile-design-system-functional-design-route-groups.md  ADR-0016-mobile-admin-root-tab-boundary.md  (+11 more)
.design/: README.md
.scratch/: midday-generic-operations-dashboard-migration.md
ai/: plan.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.staging.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
brain/: AI_PROMPT_RULES.md  AI_WORKFLOW.md  BRAIN.md  PROJECT_INDEX.md  SYSTEM_OVERVIEW.md  progress.md
scripts/: database-profile.d.mts  database-profile.mjs  db-push.ts  deploy-api.mjs  deploy-api.sh  dev-run.ts  dev.test.ts  dev.ts  eas-account-runner.ts  kill-port.sh  send-test-email.mjs  start-dev-db.sh  with-trigger-profile.mjs  with-workspace-env.mjs
(+1023 files in other folders)
