[package]
name = "ewatrade-desktop"
version = "0.1.0"
description = "EwaTrade desktop dashboard wrapper"
authors = ["EwaTrade"]
edition = "2021"

[lib]
name = "ewatrade_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
